force-app/main/default/objects/ENQ__c/ENQ__c.object-meta.xml
<CustomObject>
    <description>Here customers can enquire about the details regarding any of the car models.</description>
    <label>Prospect Enquiry</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prospect Enquiries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>