force-app/main/default/objects/ENQ__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>Mid-variant</fullName>
            </value>
            <value>
                <fullName>Top end</fullName>
            </value>
            <value>
                <fullName>Luxury</fullName>
            </value>
            <value>
                <fullName>Ultra premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>