force-app/main/default/objects/ENQ__c/fields/Price_point__c.field-meta.xml
<CustomField>
    <fullName>Price_point__c</fullName>
    <description>Choose your budget!!!</description>
    <label>Price point</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under 5 lakhs</fullName>
            </value>
            <value>
                <fullName>Under 10 lakhs</fullName>
            </value>
            <value>
                <fullName>Under 15 lakhs</fullName>
            </value>
            <value>
                <fullName>Under 20 lakhs</fullName>
            </value>
            <value>
                <fullName>Under 30 lakhs</fullName>
            </value>
            <value>
                <fullName>30-50 lakhs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>