force-app/main/default/objects/ENQ__c/fields/Queations__c.field-meta.xml
<CustomField>
    <fullName>Queations__c</fullName>
    <description>Enter the queries as per the need!!!</description>
    <label>Queations?</label>
    <type>TextArea</type>
</CustomField>