force-app/main/default/objects/ENQ__c/fields/Type_of_Car__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Car__c</fullName>
    <description>Select your car type as per requirement</description>
    <label>Type of Car</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUV</fullName>
            </value>
            <value>
                <fullName>SEDAN</fullName>
            </value>
            <value>
                <fullName>HATCHBACK</fullName>
            </value>
            <value>
                <fullName>LUXURY</fullName>
            </value>
            <value>
                <fullName>ELECTRIC</fullName>
            </value>
            <value>
                <fullName>SPORTS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>